istio/gateway/grafana-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - public-gateway-grafana.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: flagger-grafana
