istio/gateway/public-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
#        - "transparent-sock-shop.de"
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/public-gateway
  http:
    - route:
        - destination:
            host: flagger-grafana

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/public-gateway
  http:
    - route:
        - destination:
            host: front-end
